# rust-bindgen

./: .travis.yml
bindgen_plugin/: Cargo.toml
bindgen_plugin/src/: bgmacro.rs  lib.rs  parser.rs
src/: lib.rs
