[package]
authors = ["Jyun-Yan You <jyyou.tw@gmail.com>"]
description = "A binding generator for Rust - compiler plugin"
license = "BSD-3-Clause"
name = "bindgen_plugin"
version = "0.16.0"

[dependencies]
clang-sys = "~0.6.0"
easy-plugin = "~0.6.0"

[dependencies.bindgen]
path = ".."
version = "0.17.0"

[features]
static = []

[lib]
name = "bindgen_plugin"
path = "src/lib.rs"
plugin = true
